force-app/main/default/objects/Agent_Blueprint__c/Agent_Blueprint__c.object-meta.xml
<CustomObject>
    <description>Gemini-style agent blueprint with optional sub-agents</description>
    <label>Agent Blueprint</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Blueprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>