force-app/main/default/objects/Agent_Blueprint__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stable slug matching the static demo id (e.g. cyber-security-expert)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>