force-app/main/default/objects/Agent_Blueprint__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <label>Knowledge</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>