force-app/main/default/objects/Agent_Blueprint__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>