force-app/main/default/objects/Agent_Blueprint__c/fields/Personalization__c.field-meta.xml
<CustomField>
    <fullName>Personalization__c</fullName>
    <label>Personalization</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>