force-app/main/default/objects/Agent_Blueprint__c/fields/Tags_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tags_JSON__c</fullName>
    <description>JSON string array of tags, e.g. ["security","GRC"]</description>
    <label>Tags JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>